--- a/src/components/HeroBanner/HeroBanner.css
+++ b/src/components/HeroBanner/HeroBanner.css
@@ -1,7 +1,7 @@
 .hero-banner {
   position: relative;
   width: 100%;
-  height: 75vh;
+  height: 65vh;
   max-height: 650px;
   overflow: hidden;
   background-color: var(--primary-black);
@@ -17,7 +17,7 @@
 .hero-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
   transition: transform 0.6s ease;
   display: block;
