--- a/src/components/HeroBanner/HeroBanner.css
+++ b/src/components/HeroBanner/HeroBanner.css
@@ -17,7 +17,7 @@
 .hero-image {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
   transition: transform 0.6s ease;
   display: block;
